# OthelloTDLOG

./: .gitignore  .gitmodules  AI.h  CMakeLists.txt  IAAlphaBeta.h  IAAplhaBeta.cpp  README.md  bind.cpp  bindFunction.py  bindOthello.cp39-win_amd64.pyd  board.h  game.cpp  game.h  main.py  player.cpp  tree.cpp  tree.h  utils.h
app/: bindFunction.py  main.py  pygameTools.py
images/: b_retmenu.psd  boutons_carre.psd
src/: AI.cpp  board.cpp  main.cpp  player.h  utils.cpp
